--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "devDependencies": {
     "nuxt": "^3.9.3",
+    "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.4.14",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.5.1"
   },
   "dependencies": {
+    "@babel/plugin-syntax-typescript": "^7.23.3",
+    "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
+    "@vuetify/loader-shared": "^2.0.1",
+    "find-cache-dir": "^5.0.0",
     "nuxt-svgo": "^4.0.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "typescript": "^5.3.3"
   }
 }
